feat: Introduce new desk companion features including pomodoro timer, stopwatch, push notifications, system monitor, and countdown, alongside a new macOS/iOS onboarding application.

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,9 @@ board_build.partitions = partitions_custom.csv
 ; LittleFS for web UI assets
 board_build.filesystem = littlefs
 
+; Upload speed (lower for reliability with CH340)
+upload_speed = 115200
+
 ; Serial monitor
 monitor_speed = 115200
 
