feat: Rename project to SugarClock, enhance web dashboard with direct config links, remove history graph, and add a new notification page.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-; PlatformIO Configuration for Ulanzi TC001
+; PlatformIO Configuration for SugarClock (Ulanzi TC001)
 ; ESP32-WROOM-32D, 8x32 WS2812B RGB Matrix, 8MB Flash
 
 [env:esp32dev]
