chore: Update .gitignore to exclude Xcode and macOS specific files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Xcode
+build/
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+xcuserdata/
+*.xccheckout
+*.moved-aside
+DerivedData/
+*.hmap
+*.ipa
+*.xcuserstate
+
+# Project specific
 .pio/
 .vscode/
 .claude/
-.DS_Store
